Workflow updated with Stylua

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -82,7 +82,7 @@ jobs:
         run: foreman install
 
       - name: Run Stylua
-        run: stylua lib --check
+        run: stylua src --check
 
       - name: Install Dependencies
         run: wally install
