--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -64,7 +64,7 @@ jobs:
         with: 
           name: ${{ steps.read_toml.outputs.value }}
           tag_name: ${{ steps.read_toml.outputs.value }}
-          files: pack.rbxm
+          files: SimpleDialogue.rbxm
           generate_release_notes: true
           draft: true
 
