--- a/wally.toml
+++ b/wally.toml
@@ -1,8 +1,11 @@
 [package]
 name = "crabzzai/simpledialogue"
-version = "0.1.4"
+version = "0.1.5"
 registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
 
+exclude = ["**"]
+include = ["src", "src/*", "default.project.json", "wally.lock", "wally.toml"]
+
 [dependencies]
-Fusion = "elttob/fusion@0.2.0"
+Fusion = "elttob/fusion@0.3.0"
