--- a/aftman.toml
+++ b/aftman.toml
@@ -3,4 +3,6 @@
 
 # To add a new tool, add an entry to this table.
 [tools]
+wally = "UpliftGames/wally@0.3.1"
+stylua = "JohnnyMorganz/stylua@0.13.1"
 rojo = "rojo-rbx/rojo@7.4.4"
